<resources>
    <string name="app_name">Bluetooth Mesh</string>
    <string name="dialog_positive_add">Add</string>
    <string name="dialog_positive_ok">OK</string>
    <string name="dialog_positive_save">Save</string>
    <string name="dialog_positive_delete">Delete</string>
    <string name="dialog_negative_cancel">Cancel</string>
    <string name="dialog_retry">Retry</string>
    <string name="network_adapter_empty_list_title">No networks</string>
    <string name="network_adapter_empty_list_message">Tap + to add a new network.</string>
    <string name="network_adapter_devices_label">%1$d devices</string>
    <string name="network_adapter_groups_label">%1$d groups</string>
    <string name="network_update_successful_message">Network updated</string>
    <string name="device_scanner_turn_on_scan">Scan</string>
    <string name="device_scanner_turn_off_scan">Stop</string>
    <string name="network_add_successful_message">Network added</string>
    <string name="network_update_error_empty_name_message">Name is empty</string>
    <string name="network_create_error">Error creating network</string>
    <string name="network_menu_about_bluetooth_mesh">About Bluetooth Mesh</string>
    <string name="network_menu_credits">Credits</string>
    <string name="network_menu_export_cryptographic_keys">Export cryptographic keys</string>
    <string name="network_menu_export_logs">Export logs</string>
    <string name="network_menu_export_cryptographic_keys_message">Select if you want to share your cryptographic keys or save them to your phone storage.</string>
    <string name="device_dialog_info_device_category_label">Device</string>
    <string name="device_dialog_info_device_name_label">Name</string>
    <string name="device_dialog_info_address_label">Unicast Address</string>
    <string name="device_dialog_info_uuid_label">UUID</string>
    <string name="device_dialog_info_network_category_label">Network</string>
    <string name="device_dialog_info_network_name_label">Name</string>
    <string name="device_dialog_info_keys_category_label">Keys</string>
    <string name="device_dialog_info_models_category_label">Models</string>
    <string name="device_dialog_info_net_key_label">NetKey</string>
    <string name="device_dialog_info_app_key_label">AppKey</string>
    <string name="device_dialog_info_dev_key_label">DevKey</string>
    <string name="device_dialog_info_table_first_col_label">Element</string>
    <string name="device_dialog_info_table_second_col_label">Vendor</string>
    <string name="device_dialog_info_table_third_col_label">ID</string>
    <string name="device_dialog_info_table_fourth_col_label">Description</string>
    <string name="main_activity_networks_page_title">Networks</string>
    <string name="main_activity_provision_page_title">Provision</string>
    <string name="main_activity_enable_button">Enable</string>
    <string name="main_activity_bluetooth_adapter_disabled">Bluetooth adapter is disabled</string>
    <string name="main_activity_location_adapter_disabled">Location adapter is disabled</string>
    <string name="dialog_about_app_version">APP version: %s</string>
    <string name="dialog_about_api_version">API version: %s</string>
    <string name="dialog_about_adk_version">ADK version: %s</string>
    <string name="dialog_about_copyright">Copyright \u00A9 2019 Silicon Labs\nAll rights reserved</string>
    <string name="device_adapter_scenes_store_title">Store current node\'s state to scene</string>
    <string name="device_adapter_scenes_store">Store</string>
    <string name="device_adapter_scenes_one_label">Scene 1</string>
    <string name="device_adapter_scenes_two_label">Scene 2</string>
</resources>