<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright © 2019 Silicon Labs, http://www.silabs.com. All rights reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scenes_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/adapter_layout_padding"
        android:background="@color/adapter_item_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/adapter_item_padding"
            android:text="@string/device_adapter_scenes_store_title"
            android:textColor="@color/adapter_item_label_color"
            android:textSize="@dimen/adapter_label_big_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/adapter_item_padding"
                android:text="@string/device_adapter_scenes_one_label"
                android:textColor="@color/adapter_item_title_color"
                android:textSize="@dimen/adapter_label_big_size" />

            <Button
                android:id="@+id/btn_store_scene_one"
                style="@style/AppTheme.Button.Send"
                android:layout_margin="@dimen/adapter_item_padding"
                android:text="@string/device_adapter_scenes_store" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/adapter_item_padding"
                android:text="@string/device_adapter_scenes_two_label"
                android:textColor="@color/adapter_item_title_color"
                android:textSize="@dimen/adapter_label_big_size" />

            <Button
                android:id="@+id/btn_store_scene_two"
                style="@style/AppTheme.Button.Send"
                android:layout_margin="@dimen/adapter_item_padding"
                android:text="@string/device_adapter_scenes_store" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
